--- a/TimedPower/AutoTaskForm.en-us.resx
+++ b/TimedPower/AutoTaskForm.en-us.resx
@@ -117,75 +117,79 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="taskList.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="createButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="buttonPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="saveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="unsaveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="deleteButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="infoPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="TimeInput.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label4.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="timeTypeSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label3.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="TimePicker.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label2.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="ActionSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="taskName_TextBox.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label1.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="enableCheck.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="$this.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\TimedPower_logo_window-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Windows.Forms"
+    name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="deleteButton.Locked" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value />
+    <value>Scheduled tasks</value>
   </data>
   <data name="enableCheck.Text" xml:space="preserve">
-    <value />
+    <value>Enable</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
-    <value />
+    <value>Name</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
-    <value />
+    <value>Action</value>
+  </data>
+  <data name="ActionSelect.Items" xml:space="preserve">
+    <value>Shutdown</value>
+  </data>
+  <data name="ActionSelect.Items1" xml:space="preserve">
+    <value>Reboot</value>
+  </data>
+  <data name="ActionSelect.Items2" xml:space="preserve">
+    <value>Sleep</value>
+  </data>
+  <data name="ActionSelect.Items3" xml:space="preserve">
+    <value>Hibernate</value>
+  </data>
+  <data name="ActionSelect.Items4" xml:space="preserve">
+    <value>UserLock</value>
+  </data>
+  <data name="ActionSelect.Items5" xml:space="preserve">
+    <value>UserOff</value>
+  </data>
+  <data name="label3.Text" xml:space="preserve">
+    <value>Time type</value>
+  </data>
+  <data name="timeTypeSelect.Items" xml:space="preserve">
+    <value>everyday</value>
+  </data>
+  <data name="timeTypeSelect.Items1" xml:space="preserve">
+    <value>on time</value>
+  </data>
+  <data name="timeTypeSelect.Items2" xml:space="preserve">
+    <value>after app start</value>
+  </data>
+  <data name="label4.Text" xml:space="preserve">
+    <value>Time set</value>
+  </data>
+  <data name="TimeInput.PlaceholderText" xml:space="preserve">
+    <value>0:1:0 or 1min or 1分</value>
+  </data>
+  <data name="deleteButton.Text" xml:space="preserve">
+    <value>Delete task</value>
+  </data>
+  <data name="unsaveButton.Text" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="saveButton.Text" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="createButton.Text" xml:space="preserve">
+    <value>New task</value>
+  </data>
+
+  <data name="TimeInput.Location" type="System.Drawing.Point, System.Drawing">
+    <value>65, 59</value>
+  </data>
+  <data name="TimePicker.Location" type="System.Drawing.Point, System.Drawing">
+    <value>65, 58</value>
+  </data>
+  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>229, 60</value>
   </data>
 </root>
