--- a/TimedPower/AutoTaskForm.zh-cn.resx
+++ b/TimedPower/AutoTaskForm.zh-cn.resx
@@ -117,75 +117,65 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="taskList.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="createButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="buttonPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="saveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="unsaveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="deleteButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="infoPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="TimeInput.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label4.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="timeTypeSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label3.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="TimePicker.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label2.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="ActionSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="taskName_TextBox.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label1.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="enableCheck.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="$this.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\TimedPower_logo_window-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="$this.Text" xml:space="preserve">
-    <value />
+    <value>自动定时任务</value>
   </data>
   <data name="enableCheck.Text" xml:space="preserve">
-    <value />
+    <value>启用</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
-    <value />
+    <value>任务名</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
-    <value />
+    <value>操作</value>
+  </data>
+  <data name="ActionSelect.Items" xml:space="preserve">
+    <value>关机</value>
+  </data>
+  <data name="ActionSelect.Items1" xml:space="preserve">
+    <value>重启</value>
+  </data>
+  <data name="ActionSelect.Items2" xml:space="preserve">
+    <value>睡眠</value>
+  </data>
+  <data name="ActionSelect.Items3" xml:space="preserve">
+    <value>休眠</value>
+  </data>
+  <data name="ActionSelect.Items4" xml:space="preserve">
+    <value>锁定</value>
+  </data>
+  <data name="ActionSelect.Items5" xml:space="preserve">
+    <value>注销</value>
+  </data>
+
+  <data name="label3.Text" xml:space="preserve">
+    <value>时间类型</value>
+  </data>
+  <data name="timeTypeSelect.Items" xml:space="preserve">
+    <value>每天</value>
+  </data>
+  <data name="timeTypeSelect.Items1" xml:space="preserve">
+    <value>指定时间</value>
+  </data>
+  <data name="timeTypeSelect.Items2" xml:space="preserve">
+    <value>软件启动后</value>
+  </data>
+  <data name="label4.Text" xml:space="preserve">
+    <value>时间设置</value>
+  </data>
+  <data name="TimeInput.PlaceholderText" xml:space="preserve">
+    <value>0:1:0或1min或1分</value>
+  </data>
+  <data name="deleteButton.Text" xml:space="preserve">
+    <value>删除任务</value>
+  </data>
+  <data name="unsaveButton.Text" xml:space="preserve">
+    <value>取消</value>
+  </data>
+  <data name="saveButton.Text" xml:space="preserve">
+    <value>保存</value>
+  </data>
+  <data name="createButton.Text" xml:space="preserve">
+    <value>新建任务</value>
   </data>
 </root>
