--- a/TimedPower/Main.zh-cn.resx
+++ b/TimedPower/Main.zh-cn.resx
@@ -117,75 +117,127 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="taskList.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="ActionSelect.Items" xml:space="preserve">
+    <value>关机</value>
   </data>
-  <data name="createButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="ActionSelect.Items1" xml:space="preserve">
+    <value>重启</value>
   </data>
-  <data name="buttonPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="ActionSelect.Items2" xml:space="preserve">
+    <value>睡眠</value>
   </data>
-  <data name="saveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="ActionSelect.Items3" xml:space="preserve">
+    <value>休眠</value>
   </data>
-  <data name="unsaveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="ActionSelect.Items4" xml:space="preserve">
+    <value>锁定</value>
   </data>
-  <data name="deleteButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="ActionSelect.Items5" xml:space="preserve">
+    <value>注销</value>
   </data>
-  <data name="infoPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="s10.Text" xml:space="preserve">
+    <value>10秒</value>
   </data>
-  <data name="TimeInput.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="s30.Text" xml:space="preserve">
+    <value>30秒</value>
   </data>
-  <data name="label4.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="min1.Text" xml:space="preserve">
+    <value>1分钟</value>
   </data>
-  <data name="timeTypeSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="min5.Text" xml:space="preserve">
+    <value>5分钟</value>
   </data>
-  <data name="label3.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="min10.Text" xml:space="preserve">
+    <value>10分钟</value>
   </data>
-  <data name="TimePicker.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="min20.Text" xml:space="preserve">
+    <value>20分钟</value>
   </data>
-  <data name="label2.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="min40.Text" xml:space="preserve">
+    <value>40分钟</value>
   </data>
-  <data name="ActionSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="h1.Text" xml:space="preserve">
+    <value>1小时</value>
   </data>
-  <data name="taskName_TextBox.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label1.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="enableCheck.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="$this.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\TimedPower_logo_window-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="enableCheck.Text" xml:space="preserve">
-    <value />
+  <data name="h2.Text" xml:space="preserve">
+    <value>2小时</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
-    <value />
+    <value>操作:</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
-    <value />
+    <value>时间:</value>
+  </data>
+  <data name="TimeTypeSelect.Items" xml:space="preserve">
+    <value>此后</value>
+  </data>
+  <data name="TimeTypeSelect.Items1" xml:space="preserve">
+    <value>此时</value>
+  </data>
+  <data name="TimeInput.PlaceholderText" xml:space="preserve">
+    <value>0:1:0或1min或1分</value>
+  </data>
+  <data name="StartButton.Text" xml:space="preserve">
+    <value>开始</value>
+  </data>
+  <data name="StopButton.Text" xml:space="preserve">
+    <value>停止</value>
+  </data>
+  <data name="FormMenuStrip_NewTaskFile.Text" xml:space="preserve">
+    <value>新建任务文件</value>
+  </data>
+  <data name="FormMenuStrip_Setting.Text" xml:space="preserve">
+    <value>设置</value>
+  </data>
+  <data name="autoTask_ToolStripMenuItem.Text" xml:space="preserve">
+    <value>自动定时任务</value>
+  </data>
+  <data name="FormMenuStrip_Help_CheckUpdate.Text" xml:space="preserve">
+    <value>检查更新</value>
+  </data>
+  <data name="FormMenuStrip_Help_AutoCheckUpdate.Text" xml:space="preserve">
+    <value>自动检查更新</value>
+  </data>
+  <data name="FormMenuStrip_Help_HelpDoc.Text" xml:space="preserve">
+    <value>帮助文档</value>
+  </data>
+  <data name="GyToolStripMenuItem.Text" xml:space="preserve">
+    <value>关于</value>
+  </data>
+  <data name="FormMenuStrip_Help.Text" xml:space="preserve">
+    <value>帮助</value>
+  </data>
+  <data name="notifyIcon_main_ContextMenu_ShowButton.Text" xml:space="preserve">
+    <value>显示主窗口</value>
+  </data>
+  <data name="notifyIcon_main_ContextMenu_HiddenButton.Text" xml:space="preserve">
+    <value>隐藏主窗口</value>
+  </data>
+  <data name="自动定时任务ToolStripMenuItem.Text" xml:space="preserve">
+    <value>自动定时任务</value>
+  </data>
+  <data name="nmc_CheckUpdate.Text" xml:space="preserve">
+    <value>检查更新</value>
+  </data>
+  <data name="nmc__AutoCheckUpdate.Text" xml:space="preserve">
+    <value>自动检查更新</value>
+  </data>
+  <data name="帮助文档ToolStripMenuItem.Text" xml:space="preserve">
+    <value>帮助文档</value>
+  </data>
+  <data name="关于ToolStripMenuItem.Text" xml:space="preserve">
+    <value>关于</value>
+  </data>
+  <data name="帮助ToolStripMenuItem.Text" xml:space="preserve">
+    <value>帮助</value>
+  </data>
+  <data name="notifyIcon_main_ContextMenu_ExitButton.Text" xml:space="preserve">
+    <value>退出</value>
+  </data>
+  <data name="notifyIcon_main.Text" xml:space="preserve">
+    <value>定时电源</value>
+  </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>定时电源</value>
   </data>
 </root>
