--- a/TimedPower/Resources/langs/language.en-us.resx
+++ b/TimedPower/Resources/langs/language.en-us.resx
@@ -117,75 +117,108 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="taskList.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.hibernate" xml:space="preserve">
+    <value>hibernate</value>
   </data>
-  <data name="createButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.reboot" xml:space="preserve">
+    <value>restart</value>
   </data>
-  <data name="buttonPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.shutdown" xml:space="preserve">
+    <value>shutdown</value>
   </data>
-  <data name="saveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.sleep" xml:space="preserve">
+    <value>sleep</value>
   </data>
-  <data name="unsaveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.userlock" xml:space="preserve">
+    <value>lock</value>
   </data>
-  <data name="deleteButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.useroff" xml:space="preserve">
+    <value>log off</value>
   </data>
-  <data name="infoPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.fileWindow.newTaskFile.filter" xml:space="preserve">
+    <value>TimedPower task file {0}</value>
   </data>
-  <data name="TimeInput.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.fileWindow.newTaskFile.title" xml:space="preserve">
+    <value>Create task file</value>
   </data>
-  <data name="label4.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.checkUpdateFailed" xml:space="preserve">
+    <value>Update check failed!</value>
   </data>
-  <data name="timeTypeSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.downloadDone" xml:space="preserve">
+    <value>The latest version has been downloaded. Do you want to proceed with the installation?</value>
   </data>
-  <data name="label3.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.downloadUpdateFailed" xml:space="preserve">
+    <value>Download update failed!</value>
   </data>
-  <data name="TimePicker.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.haveUpdate" xml:space="preserve">
+    <value>Checked for available updates, do you want to update?
+Current version: V{0}
+Latest version: {1}
+Release time: {2}
+Size: {3}
+Release notes:
+{4}
+{5}</value>
   </data>
-  <data name="label2.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.isNewVersion" xml:space="preserve">
+    <value>The current version is already the latest version.</value>
   </data>
-  <data name="ActionSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.littleTimeWarning" xml:space="preserve">
+    <value>Are you sure to continue if the timer time is less than or equal to 5 seconds?</value>
   </data>
-  <data name="taskName_TextBox.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.newVersionNeedRemoveOldVersionReg" xml:space="preserve">
+    <value>Due to the current program version update, old registry data needs to be deleted. If cancelled, the scripts provided in the software open source repository can be used for deletion in the future.</value>
   </data>
-  <data name="label1.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.onlyUseFuture" xml:space="preserve">
+    <value>You can only choose a future time!</value>
   </data>
-  <data name="enableCheck.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.thanksToUse" xml:space="preserve">
+    <value>This software has served you {0} times already. If you find it useful, please go to the Github repository of the software and light up Star to support developers!</value>
   </data>
-  <data name="$this.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.thanksToUse2" xml:space="preserve">
+    <value>Thank you for using</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\TimedPower_logo_window-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="main.messagebox.timeValueError" xml:space="preserve">
+    <value>Time format error!</value>
   </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value />
+  <data name="main.messagebox.timeValueTooBig" xml:space="preserve">
+    <value>The time value is too large!</value>
   </data>
-  <data name="enableCheck.Text" xml:space="preserve">
-    <value />
+  <data name="main.winToast.timeWarning.button" xml:space="preserve">
+    <value>Stop</value>
   </data>
-  <data name="label1.Text" xml:space="preserve">
-    <value />
+  <data name="main.winToast.timeWarning.text" xml:space="preserve">
+    <value>Warning, will be {1} after {0}</value>
   </data>
-  <data name="label2.Text" xml:space="preserve">
-    <value />
+  <data name="main.winToast.timeWarning_autoTask.button" xml:space="preserve">
+    <value>Disable current task</value>
+  </data>
+  <data name="main.winToast.timeWarning_autoTask.text" xml:space="preserve">
+    <value>Warning, the automatic scheduled task named '{0}' will perform the {2} operation after {1}</value>
+  </data>
+
+  <data name="autoTaskForm.text.newTaskName" xml:space="preserve">
+    <value>new task</value>
+  </data>
+  <data name="autoTaskForm.messagebox.deleteFailed" xml:space="preserve">
+    <value>Delete failed!</value>
+  </data>
+  <data name="autoTaskForm.messagebox.haveNoSave" xml:space="preserve">
+    <value>There is currently unsaved content, do you want to continue?</value>
+  </data>
+  <data name="autoTaskForm.messagebox.defendMessage" xml:space="preserve">
+    <value>Warning, the automatic scheduled task protection program has prevented a possible abnormal task operation.
+The automatic scheduled task protection program will prevent any power operation within 30 seconds of program startup and 10 seconds after changing the automatic scheduled task settings. To avoid possible misoperations.
+Click confirm to exit the program.</value>
+  </data>
+
+<data name="setting.contextMenu.title" xml:space="preserve">
+    <value>Timed Power</value>
+  </data>
+  <data name="setting.contextMenu.af15s" xml:space="preserve">
+    <value>after 15s</value>
+  </data>
+  <data name="setting.contextMenu.af1min" xml:space="preserve">
+    <value>after 1min</value>
   </data>
 </root>
