--- a/TimedPower/Resources/langs/language.resx
+++ b/TimedPower/Resources/langs/language.resx
@@ -117,75 +117,77 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="taskList.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.hibernate" xml:space="preserve">
+    <value />
   </data>
-  <data name="createButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.reboot" xml:space="preserve">
+    <value />
   </data>
-  <data name="buttonPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.shutdown" xml:space="preserve">
+    <value />
   </data>
-  <data name="saveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.sleep" xml:space="preserve">
+    <value />
   </data>
-  <data name="unsaveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.userlock" xml:space="preserve">
+    <value />
   </data>
-  <data name="deleteButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.useroff" xml:space="preserve">
+    <value />
   </data>
-  <data name="infoPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.fileWindow.newTaskFile.filter" xml:space="preserve">
+    <value />
   </data>
-  <data name="TimeInput.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.fileWindow.newTaskFile.title" xml:space="preserve">
+    <value />
   </data>
-  <data name="label4.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.checkUpdateFailed" xml:space="preserve">
+    <value />
   </data>
-  <data name="timeTypeSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.downloadDone" xml:space="preserve">
+    <value />
   </data>
-  <data name="label3.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.downloadUpdateFailed" xml:space="preserve">
+    <value />
   </data>
-  <data name="TimePicker.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.haveUpdate" xml:space="preserve">
+    <value />
   </data>
-  <data name="label2.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.isNewVersion" xml:space="preserve">
+    <value />
   </data>
-  <data name="ActionSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.littleTimeWarning" xml:space="preserve">
+    <value />
   </data>
-  <data name="taskName_TextBox.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.newVersionNeedRemoveOldVersionReg" xml:space="preserve">
+    <value />
   </data>
-  <data name="label1.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.onlyUseFuture" xml:space="preserve">
+    <value />
   </data>
-  <data name="enableCheck.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.thanksToUse" xml:space="preserve">
+    <value />
   </data>
-  <data name="$this.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.thanksToUse2" xml:space="preserve">
+    <value />
+  </data>
+  <data name="main.messagebox.timeValueError" xml:space="preserve">
+    <value />
+  </data>
+  <data name="main.messagebox.timeValueTooBig" xml:space="preserve">
+    <value />
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\TimedPower_logo_window-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
+  <data name="main.winToast.timeWarning.button" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
-  <data name="enableCheck.Text" xml:space="preserve">
+  <data name="main.winToast.timeWarning.text" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
-  <data name="label1.Text" xml:space="preserve">
+  <data name="main.winToast.timeWarning_autoTask.button" xml:space="preserve">
     <value />
   </data>
-  <data name="label2.Text" xml:space="preserve">
+  <data name="main.winToast.timeWarning_autoTask.text" xml:space="preserve">
     <value />
   </data>
 </root>
