--- a/TimedPower/Resources/langs/language.zh-cn.resx
+++ b/TimedPower/Resources/langs/language.zh-cn.resx
@@ -117,75 +117,108 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="taskList.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.hibernate" xml:space="preserve">
+    <value>休眠</value>
   </data>
-  <data name="createButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.reboot" xml:space="preserve">
+    <value>重启</value>
   </data>
-  <data name="buttonPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.shutdown" xml:space="preserve">
+    <value>关机</value>
   </data>
-  <data name="saveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.sleep" xml:space="preserve">
+    <value>睡眠</value>
   </data>
-  <data name="unsaveButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.userlock" xml:space="preserve">
+    <value>锁定</value>
   </data>
-  <data name="deleteButton.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="global.useroff" xml:space="preserve">
+    <value>注销</value>
   </data>
-  <data name="infoPanel.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.fileWindow.newTaskFile.filter" xml:space="preserve">
+    <value>定时电源任务文件{0}</value>
   </data>
-  <data name="TimeInput.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.fileWindow.newTaskFile.title" xml:space="preserve">
+    <value>新建任务模板文件</value>
   </data>
-  <data name="label4.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.checkUpdateFailed" xml:space="preserve">
+    <value>更新检查失败！</value>
   </data>
-  <data name="timeTypeSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.downloadDone" xml:space="preserve">
+    <value>最新版本下载完毕，是否执行安装？</value>
   </data>
-  <data name="label3.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.downloadUpdateFailed" xml:space="preserve">
+    <value>下载更新失败！</value>
   </data>
-  <data name="TimePicker.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.haveUpdate" xml:space="preserve">
+    <value>检查到可用的更新，是否进行更新？
+当前版本: V{0}
+最新版本: {1}
+发布时间: {2}
+大小: {3}
+发行说明:
+{4}
+{5}</value>
   </data>
-  <data name="label2.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.isNewVersion" xml:space="preserve">
+    <value>当前已是最新版本</value>
   </data>
-  <data name="ActionSelect.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.littleTimeWarning" xml:space="preserve">
+    <value>计时时间小于等于5秒，确定继续吗？</value>
   </data>
-  <data name="taskName_TextBox.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.newVersionNeedRemoveOldVersionReg" xml:space="preserve">
+    <value>因当前程序版本更新，需要删除旧的注册表数据。如果取消，后续可使用软件开源仓库中提供的脚本进行删除。</value>
   </data>
-  <data name="label1.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.onlyUseFuture" xml:space="preserve">
+    <value>只能选择未来的时间！</value>
   </data>
-  <data name="enableCheck.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.thanksToUse" xml:space="preserve">
+    <value>该软件已经为你服务{0}次啦。如果觉得好用，还请前往该软件的Github仓库中点亮Star以支持开发者！</value>
   </data>
-  <data name="$this.Locked" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="main.messagebox.thanksToUse2" xml:space="preserve">
+    <value>感谢使用</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\TimedPower_logo_window-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="main.messagebox.timeValueError" xml:space="preserve">
+    <value>时间格式错误！</value>
   </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value />
+  <data name="main.messagebox.timeValueTooBig" xml:space="preserve">
+    <value>时间数值过大！</value>
   </data>
-  <data name="enableCheck.Text" xml:space="preserve">
-    <value />
+  <data name="main.winToast.timeWarning.button" xml:space="preserve">
+    <value>终止定时</value>
   </data>
-  <data name="label1.Text" xml:space="preserve">
-    <value />
+  <data name="main.winToast.timeWarning.text" xml:space="preserve">
+    <value>警告，将在{0}后{1}</value>
   </data>
-  <data name="label2.Text" xml:space="preserve">
-    <value />
+  <data name="main.winToast.timeWarning_autoTask.button" xml:space="preserve">
+    <value>禁用当前任务</value>
+  </data>
+  <data name="main.winToast.timeWarning_autoTask.text" xml:space="preserve">
+    <value>警告，名为"{0}"的自动定时任务将在{1}后执行{2}操作</value>
+  </data>
+
+<data name="autoTaskForm.text.newTaskName" xml:space="preserve">
+    <value>新的自动任务</value>
+  </data>
+  <data name="autoTaskForm.messagebox.deleteFailed" xml:space="preserve">
+    <value>删除失败！</value>
+  </data>
+  <data name="autoTaskForm.messagebox.haveNoSave" xml:space="preserve">
+    <value>当前有未保存的内容，是否继续？</value>
+  </data>
+<data name="autoTaskForm.messagebox.defendMessage" xml:space="preserve">
+    <value>警告，自动定时任务保护程序已阻止了一个可能的异常任务操作。
+自动定时任务保护程序将在程序启动的30秒内和更改完自动定时任务设置的10秒内阻止任何电源操作。以避免可能的误操作。
+点击确认以退出程序。</value>
+  </data>
+
+<data name="setting.contextMenu.title" xml:space="preserve">
+    <value>定时电源</value>
+  </data>
+  <data name="setting.contextMenu.af15s" xml:space="preserve">
+    <value>15秒后</value>
+  </data>
+  <data name="setting.contextMenu.af1min" xml:space="preserve">
+    <value>1分钟后</value>
   </data>
 </root>
